@@ -1,11 +1,14 @@
+// src/test/java/org/grnet/cat/api/KeycloakTest.java
 package org.grnet.cat.api;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.quarkus.test.junit.QuarkusMock;
 import io.quarkus.test.junit.QuarkusTest;
-import io.quarkus.test.keycloak.client.KeycloakTestClient;
+import io.restassured.RestAssured;
 import io.restassured.http.ContentType;
 import jakarta.inject.Inject;
+import io.quarkus.test.common.http.TestHTTPResource;
+import io.quarkus.test.keycloak.client.KeycloakTestClient;
 import org.grnet.cat.dtos.UpdateUserProfileDto;
 import org.grnet.cat.dtos.UserProfileDto;
 import org.grnet.cat.entities.Role;
@@ -18,17 +21,33 @@ import org.grnet.cat.services.UserService;
 import org.grnet.cat.services.ValidationService;
 import org.grnet.cat.services.assessment.JsonAssessmentService;
 import org.grnet.cat.services.registry.CriterionService;
-import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.TestInstance;
 import org.mockito.Mockito;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
+import java.net.URI;
 import java.util.Collections;
 import java.util.List;
 
 import static io.restassured.RestAssured.given;
 import static org.mockito.ArgumentMatchers.any;
+import static org.hamcrest.Matchers.anyOf;
+import static org.hamcrest.Matchers.is;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
+/**
+ * Base test class for Keycloak-related tests.
+ */
+@TestInstance(TestInstance.Lifecycle.PER_CLASS) // Allows non-static @BeforeAll and @AfterAll
 @QuarkusTest
 public class KeycloakTest {
+
+    private static final Logger LOGGER = LoggerFactory.getLogger(KeycloakTest.class);
+
+    @TestHTTPResource
+    URI baseUri;
 
     KeycloakTestClient keycloakClient = new KeycloakTestClient();
 
@@ -43,6 +62,7 @@ public class KeycloakTest {
 
     @Inject
     ObjectMapper objectMapper;
+
     @Inject
     CommentService commentService;
 
@@ -55,14 +75,27 @@ public class KeycloakTest {
     @Inject
     MetricDefinitionRepository metricDefinitionRepository;
 
-    @BeforeEach
+    //@BeforeEach
+    protected String adminToken;
+    protected String aliceToken;
+    protected String bobToken;
+    protected String validatedToken;
+    protected String evaldToken;
+
+
+    @BeforeAll
     public void setup() {
+        RestAssured.baseURI = baseUri.toString();
 
-        var mock = Mockito.mock(KeycloakAdminService.class);
+        var mockAdminService = Mockito.mock(KeycloakAdminService.class);
+        Mockito.doNothing().when(mockAdminService).addEntitlementsToUser(any(), any());
+        Mockito.when(mockAdminService.getUserEntitlements(any())).thenReturn(Collections.emptyList());
+        QuarkusMock.installMockForType(mockAdminService, KeycloakAdminService.class);
 
-        Mockito.doNothing().when(mock).addEntitlementsToUser(any(), any());
-        Mockito.when(mock.getUserEntitlements(any())).thenReturn(Collections.emptyList());
-        QuarkusMock.installMockForType(mock, KeycloakAdminService.class);
+        var mockAdminRepository = Mockito.mock(KeycloakAdminRepository.class);
+        Role role = new Role("identified_id", "identified", "The identified role");
+        Mockito.when(mockAdminRepository.fetchUserRoles(any())).thenReturn(List.of(role));
+        QuarkusMock.installMockForType(mockAdminRepository, KeycloakAdminRepository.class);
 
         commentService.deleteAll();
         jsonAssessmentService.deleteAll();
@@ -71,46 +104,58 @@ public class KeycloakTest {
         criterionService.deleteAll();
         motivationPrincipleRepository.removeAll();
         metricDefinitionRepository.removeAll();
+
+        register("admin");
+        register("alice");
+        register("validated");
+        register("bob");
+
+        adminToken = getAccessToken("admin");
+        aliceToken = getAccessToken("alice");
+        validatedToken = getAccessToken("validated");
+        evaldToken = getAccessToken("evald");
+        bobToken = getAccessToken("bob");
     }
 
     protected UserProfileDto register(String username) {
+        try {
+            var registerResponse = given()
+                    .auth()
+                    .oauth2(getAccessToken(username))
+                    .basePath("/v1/users/")
+                    .post("/register")
+                    .then()
+                    .assertThat()
+                    .statusCode(201)
+                    .extract()
+                    .as(UserProfileDto.class);
 
-        var role = new Role("identidied_id", "identified", "The identified role");
+            var update = new UpdateUserProfileDto();
+            update.name = "foo";
+            update.surname = "foo";
+            update.email = username.concat("@admin.grnet.gr");
 
-        var mock = Mockito.mock(KeycloakAdminRepository.class);
-        Mockito.when(mock.fetchUserRoles(any())).thenReturn(List.of(role));
-        QuarkusMock.installMockForType(mock, KeycloakAdminRepository.class);
+            var profile = given()
+                    .auth()
+                    .oauth2(getAccessToken(username))
+                    .body(update)
+                    .contentType(ContentType.JSON)
+                    .basePath("/v1/users/")
+                    .put("/profile")
+                    .then()
+                    .assertThat()
+                    .statusCode(200)
+                    .extract()
+                    .as(UserProfileDto.class);
 
-        given()
-                .auth()
-                .oauth2(getAccessToken(username))
-                .basePath("/v1/users/")
-                .post("/register")
-                .then()
-                .assertThat()
-                .statusCode(201)
-                .extract()
-                .as(UserProfileDto.class);
-
-        var update = new UpdateUserProfileDto();
-        update.name = "foo";
-        update.surname = "foo";
-        update.email = username.concat("@admin.grnet.gr");
-
-        var profile = given()
-                .auth()
-                .oauth2(getAccessToken(username))
-                .body(update)
-                .contentType(ContentType.JSON)
-                .basePath("/v1/users/")
-                .put("/profile")
-                .then()
-                .assertThat()
-                .statusCode(200)
-                .extract()
-                .as(UserProfileDto.class);
-
-        return profile;
+            return profile;
+        } catch (Exception e) {
+            if (e.getMessage().contains("409")) {
+                return userService.getUserProfile(username);
+            } else {
+                throw e;
+            }
+        }
     }
 
     protected String getAccessToken(String userName) {
